fix: double scrollbar in unified product (#2619)

--- a/src/electron/views/automated-checks/automated-checks-view.scss
+++ b/src/electron/views/automated-checks/automated-checks-view.scss
@@ -21,7 +21,8 @@
 
     .automated-checks-panel-layout {
         display: flex;
-        height: 100%;
+        flex-grow: 1;
+        overflow: hidden;
         main {
             margin-top: 16px;
             margin-bottom: 16px;
